--- a/_posts/2016-10-18-prime.md
+++ b/_posts/2016-10-18-prime.md
@@ -3,10 +3,10 @@ layout: post
 title: 소(솟)수를 구해보자
 description: "소수를 구하는 방법을 시간복잡도에 따라 구해보자. 그 중 가장 빠른 에라토스테네스체도 알아보자."
 tags:
-  - css
+  - algorithm
 comments: true
 share: true
-date: 2016-11-04
+date: 2016-10-18
 ---
 
 # Prime
