--- a/_posts/2017-5-22-dp-11052.md
+++ b/_posts/2017-5-22-dp-11052.md
@@ -1,3 +1,14 @@
+---
+layout: post
+title: "BOJ 11052 붕어빵 팔기"
+description: "Dynamic Programming"
+tags:
+  - "algorithm"
+comments: true
+share: true
+date: 2017-5-22
+---
+
 # 11052 붕어빵
 
 붕어빵이 i개 일 때, 세트 메뉴의 가격은 P(i)원이다.
