[js] scope chain

--- a/_posts/2016-11-8-closure.md
+++ b/_posts/2016-11-8-closure.md
@@ -55,17 +55,15 @@ a = 6
 
 ```html
 <script>
+window.onload = function(){
+  var list = document.getElementsByTagName("button");
 
-  window.onload = function(){
-      var list = document.getElementsByTagName("button");
-
-      for(var i =0, length = list.length; i<length; i++){
-          list[i].onclick=function(){
-          console.log(this.innerHTML+"은"+(i+1)+"번째 버튼입니다");
-          }
-      }
+  for(var i=0, length = list.length; i<length; i++){
+    list[i].onclick=function(){
+    	console.log(this.innerHTML+"은"+(i+1)+"번째 버튼입니다");
+    }
   }
-
+}
 </script>
 
 <button>1번째 버튼</button>
@@ -82,7 +80,7 @@ a = 6
 */
 ```
 
-- 클릭 에빈트가 참조하는 변수 i의 값이 for문 다 돌고 난 후의 i값을 참조
+- 클릭 이벤트가 참조하는 변수 i의 값이 for문 다 돌고 난 후의 i값을 참조
 - 1가지 i값을 참조하므로 전부 4라는 결과 나옴
 
 ### 해결책 : 중첩 클로저
@@ -90,18 +88,18 @@ a = 6
 ```html
 
 <script>
-  window.onload = function(){
-      var list = document.getElementsByTagName("button");
+window.onload = function(){
+  var list = document.getElementsByTagName("button");
 
-      var gate = function(i){
-          list[i].onclick=function(){
-          console.log(this.innerHTML+"은"+(i+1)+"번째 버튼입니다");
-          }
-      }
-      for(var i =0, length = list.length; i<length; i++){
-           gate(i);
-      }
+  var gate = function(i){
+    list[i].onclick=function(){
+    	console.log(this.innerHTML+"은"+(i+1)+"번째 버튼입니다");
+    }
   }
+  for(var i =0, length = list.length; i<length; i++){
+    gate(i);
+  }
+}
 </script>
 
 <button>1번째 버튼</button>
