포스팅 max-width 수정

--- a/_posts/2017-5-22-dp-11052.md
+++ b/_posts/2017-5-22-dp-11052.md
@@ -4,6 +4,7 @@ title: "BOJ 11052 붕어빵 팔기"
 description: "Dynamic Programming"
 tags:
   - "algorithm"
+  - "dynamic programming"
 comments: true
 share: true
 date: 2017-5-22
