--- a/_posts/2016-11-8-closure.md
+++ b/_posts/2016-11-8-closure.md
@@ -6,14 +6,17 @@ tags:
   - javascript
 comments: true
 share: true
-date: 2016-11-8
+date: 2017-6-13
 ---
 
 # closure
-js scope chain을 이용하여 이미 생명 주기가 끝난 외부 함수의 변수를 참조하는 방법.
-외부 함수가 종료되더라도 내부함수가 실행되는 상태면, 내부함부에서 참조하는 외부함수는 닫히지 못하고 내부 함수에 의해서 닫히게 되어 클로저라 부른다.
 
-내부 변수는 하나의 클로저에만 종속될 필요는 없다. 외부 함수가 실행될 때마다 새로운 scope chain과 새로운 내부 변수를 생성한다. 또, 클로저가 참조하는 내부 변수는 실제 내부 변수의 복사본이 아닌 그 내부 변수를 직접 참조한다.
+> 클로저는 독립적인 (자유) 변수 (지역적으로 사용되지만, 둘러싼 범위 안에서 정의된 변수)를 참조하는 함수들이다. 다른 말로 하면, 이 함수들은 그들이 생성된 환경을 '기억'한다.
+
+js scope chain을 이용하여 이미 생명 주기가 끝난 외부 함수의 변수를 참조하는 방법.
+외부 함수가 종료되더라도 내부함부에서 참조하는 외부함수는 닫히지 못하고 내부 함수에 의해서 닫히게 되어 클로저라 부른다.
+
+내부 변수는 하나의 클로저에만 종속될 필요는 없다. **외부 함수가 실행될 때마다 새로운 scope chain과 새로운 내부 변수를 생성한다.** 또, 클로저가 참조하는 내부 변수는 실제 내부 변수의 복사본이 아닌 그 내부 변수를 직접 참조한다.
 
 ```javascript
 function outerFunc(){
@@ -45,9 +48,29 @@ a = 6
 */
 ```
 
+C언어의 블록 스코프에 익숙하면 위의 코드는 이해하기 힘들다. 왜냐하면 종료된 함수의 지역 변수(`var a`)가 존재하기 때문이다.
 
-## 클로저의 사용 이유
+그 이유는 Javascript 함수가 클로저를 형성하기 때문이다.
+
+클로저는 함수와 함수가 선언된 문법적 환경의 조합이다. 위의 예시를 다시 보자. 변수 `out`은 `outerFunc()`가 실행될 때 생성된 innerFunc1과 innerFunc2 `함수의 인스턴스에 대한 참조값`을 가진다.
+
+`innerFunc1`(innerFunc2도 마찬가지다.)의 인스턴스는 변수 `a`가 있는 `문법적 환경에 대한 참조`를 유지한다.
+
+
+## 실용적인 클로저
+
+## 클로저의 사용 이유 1
+
+
+
+
+## 클로저의 사용 이유 2
 클로저를 사용하면 전역변수의 오,남용 없는 깔끔한 스크립트를 작성할 수 있다. 그의 대표적인 예로 `모듈 패턴`
+
+
+## 클로저의 사용 이유 3
+
+private 흉내내기
 
 ## NOTE
 
