--- a/_posts/2017-6-13-closure.md
+++ b/_posts/2017-6-13-closure.md
@@ -13,10 +13,12 @@ date: 2017-6-13
 
 > 클로저는 독립적인 (자유) 변수 (지역적으로 사용되지만, 둘러싼 범위 안에서 정의된 변수)를 참조하는 함수들이다. 다른 말로 하면, 이 함수들은 그들이 생성된 환경을 '기억'한다.
 
-js scope chain을 이용하여 이미 생명 주기가 끝난 외부 함수의 변수를 참조하는 방법.
-외부 함수가 종료되더라도 내부함부에서 참조하는 외부함수는 닫히지 못하고 내부 함수에 의해서 닫히게 되어 클로저라 부른다.
+간단히 말하자면 클로저는 `함수를 선언할 때 만들어지는 유효 범위`다. 함수는 클로저를 통해서 자신이 선언될 때 속해 있던 유효 범위 내의 변수와 함수를 사용할 수 있고, 변수의 경우 그 값을 변경 할 수도 있다. 또한, 함수를 선언한 후에 언제든지(**심지어 함수가 속해 있던 유효 범위가 사라진 후에도**) 그 함수를 호출할 수 있다.
 
-내부 변수는 하나의 클로저에만 종속될 필요는 없다. **외부 함수가 실행될 때마다 새로운 scope chain과 새로운 내부 변수를 생성한다.** 또, 클로저가 참조하는 내부 변수는 실제 내부 변수의 복사본이 아닌 그 내부 변수를 직접 참조한다.
+클로저를 또다른 방식으로 설명해보자.(왜냐하면 내가 자꾸 까먹으니까)
+Scope Chain을 이용하여 이미 생명 주기가 끝난 외부 함수의 변수를 참조하는 방법이다. 외부 함수가 종료되더라도 내부함수가 참조되고 있는 상태면, 내부함부에서 참조하는 외부함수는 닫히지 못하고 내부 함수에 의해서 닫히게 되어 클로저라 부른다.
+
+내부 변수는 하나의 클로저에만 종속될 필요는 없다. 외부 함수가 실행될 때마다 새로운 scope chain과 새로운 내부 변수를 생성한다.(실행될 때마다 새로운 유효 범위를 생성하는데 이는 메모리 누수를 발생시킬 수 있다) 또, 클로저가 참조하는 내부 변수는 실제 내부 변수의 복사본이 아닌 그 내부 변수를 직접 참조한다.
 
 ```javascript
 function outerFunc(){
@@ -48,13 +50,35 @@ a = 6
 */
 ```
 
-C언어의 블록 스코프에 익숙하면 위의 코드는 이해하기 힘들다. 왜냐하면 종료된 함수의 지역 변수(`var a`)가 존재하기 때문이다.
+C언어의 블록 스코프에 익숙하면 위의 코드는 이해하기 힘들다. 왜냐하면 종료된 함수의 지역 변수(`var a`)가 존재하기 때문이다. 그 이유는 Javascript 함수가 클로저를 형성하기 때문이다. 클로저는 함수와 함수가 선언된 문법적 환경의 조합이다. 위의 예시를 다시 보자. 변수 `out`은 `outerFunc()`가 실행될 때 생성된 innerFunc1과 innerFunc2 `함수의 인스턴스에 대한 참조값`을 가진다. `innerFunc1`(innerFunc2도 마찬가지다.)의 인스턴스는 변수 `a`가 있는 `문법적 환경에 대한 참조`를 유지한다.
 
-그 이유는 Javascript 함수가 클로저를 형성하기 때문이다.
+## 예시를 통해 클로저 동작 알아보자.
 
-클로저는 함수와 함수가 선언된 문법적 환경의 조합이다. 위의 예시를 다시 보자. 변수 `out`은 `outerFunc()`가 실행될 때 생성된 innerFunc1과 innerFunc2 `함수의 인스턴스에 대한 참조값`을 가진다.
+```javascript
+var outerValue = 'hoil';
 
-`innerFunc1`(innerFunc2도 마찬가지다.)의 인스턴스는 변수 `a`가 있는 `문법적 환경에 대한 참조`를 유지한다.
+var later;
+
+function outerFunction(){
+    var innnerValue = 'pyapya';
+
+    function innerFunction() {
+        assert(outerValue, "I can access hoil");
+        assert(innerValue, "I can access pyapya");
+    }
+
+    later = innerFunction;
+}
+
+outerFunction();
+
+later();
+```
+
+- `innerValue`의 유효 범위는 `outerFunction()` 내부로 제한된다. 함수 외부에서는 접근 불가능하다. (**Scope Chain을 떠올리자**)
+- `outerFunction`내에 선언된 `innerFunction`은 `innerValue`가 선언된 유효 범위에 존재한다.
+- `outerFunction()`실행 시 전역 변수인 `later` 변수에 참조된다. 
+- `later()`, later 변수를 이용하여 `innerFunction()`을 호출한다. `innerFunction()`의 유효 범위는 `outerFunction`내부까지 제한되어있다.(**마찬가지로 Scope Chain**) 그래서 외부에서 직접 호출하는 것은 불가능하다.
 
 
 ## 클로저의 사용 이유 1
@@ -63,7 +87,9 @@ C언어의 블록 스코프에 익숙하면 위의 코드는 이해하기 힘들
 
 ## 클로저의 사용 이유 2
 
-private 흉내내기
+자바의 private을 흉내낼 수 있다.
+
+
 
 ## NOTE
 
